--- a/CatetanNgutang/res/layout/main.xml
+++ b/CatetanNgutang/res/layout/main.xml
@@ -8,6 +8,7 @@
         android:layout_alignParentStart="true"
         android:footerDividersEnabled="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Button 
